Fix popup alignment

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -3,3 +3,7 @@ body {
     text-align: center;
 }
 
+.container {
+    display: inline-block;
+    text-align: left;
+}
